# playpen

./: .gitignore  README.md  game_registry.json.template  initial_tulu_sample_stats.csv  model_registry.json  playpen.ipynb  push_to_hf.py  pyproject.toml  test_dataset.py
examples/trl/: data_utils.py  data_utils_old.py  dpo_trainer_lora.py  dpo_trainer_stub.py  grpo_trainer_lora.py  grpo_trainer_lora_sp.py  ppo_trainer_lora.py  sft_trainer_lora.py  sft_trainer_simple.py
grpo_rewards/: __init__.py  clembench_grpo_rewards.ipynb  clembench_grpo_rewards.py  grpo-reward-functions.ipynb  grpo_reward_functions.py  reward_imagegame.py  reward_referencegame.py  reward_taboo.py  reward_wordle.py  reward_wordle_withclue.py  reward_wordle_withcritic.py  router_reward.py
playpen/: __init__.py  base.py  buffers.py  callbacks.py  cli.py
playpen-eval/2025-07-08T07-39-15 sft-initial clemscore/: llama3-8b-sft.val.json  raw.csv  results.csv  results.html
playpen-eval/2025-07-14T22-38-57-tulu3-8b-sft/: tulu3-8b-sft.val.json
playpen-eval/2025-07-14T23-13-20-tulu3-8b-dpo/: tulu3-8b-dpo.val.json
playpen-eval/2025-07-15T00-08-29-tulu3-8b/: tulu3-8b.val.json
playpen-eval/2025-07-15T01-01-31-llama3-8b-base/: llama3-8b.val.json
playpen-eval/2025-07-15T08-27-20 sft initial statscore/: llama3-8b-sft-initial.val.json
playpen-eval/2025-08-04T05-37-59 sft-dpo/: llama3-8b-dpo.val.json
playpen-eval/2025-08-20T08-06-11 sft-dpo-tulu/: llama3-8b-dpo-tulu.val.json
playpen/envs/: __init__.py  branching_env.py  game_env.py
prompts/imagegame/: prompt_v1.5.txt  prompt_v1.6.txt  prompt_v1.6_quantized.txt
prompts/referencegame/: prompt_v1.5.txt  prompt_v1.6.txt
prompts/taboo/: prompt_v0.9.txt  prompt_v1.0.txt  prompt_v1.5.txt  prompt_v1.5_quantized.txt  prompt_v1.6.txt  prompt_v1.6_backends.txt  prompt_v1.6_quantized.txt
prompts/wordle/: prompt_v1.5.txt
prompts/wordle_withclue/: prompt_v1.6.txt
prompts/wordle_withcritic/: another_sample.txt  prompt_v0.9.txt  prompt_v1.0.txt  prompt_v1.5.txt  prompt_v1.5_quantized.txt  (+3 more)
tests/: test_rewards_unit.py
(+17746 files in other folders)
